[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/menus/quit.png" type="Texture" id=1]
[ext_resource path="res://sprites/menus/play-again.png" type="Texture" id=2]
[ext_resource path="res://sprites/menus/defeat.png" type="Texture" id=3]
[ext_resource path="res://EndScreen.gd" type="Script" id=4]

[node name="EndScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.752941, 0.74902, 0.721569, 1 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 232.0
margin_top = 144.0
margin_right = 3257.0
margin_bottom = 417.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="SurvivedText" type="RichTextLabel" parent="."]
margin_left = 329.0
margin_top = 220.0
margin_right = 553.0
margin_bottom = 244.0
rect_scale = Vector2( 2, 2 )
text = "You survived for 30 seconds"

[node name="NewGame" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = 283.0
margin_right = 702.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 334, 81 )
color = Color( 0.419608, 0.396078, 0.352941, 1 )

[node name="PlayText" type="TextureRect" parent="NewGame"]
margin_left = 68.0
margin_top = 17.0
margin_right = 941.0
margin_bottom = 183.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Quit" type="ColorRect" parent="."]
margin_left = 321.0
margin_top = 386.0
margin_right = 703.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 334, 81 )
color = Color( 0.419608, 0.396078, 0.352941, 1 )

[node name="QuitText" type="TextureRect" parent="Quit"]
margin_left = 139.0
margin_top = 17.0
margin_right = 474.0
margin_bottom = 179.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[connection signal="gui_input" from="NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="mouse_entered" from="NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="gui_input" from="Quit" to="." method="_on_Quit_gui_input"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Quit_mouse_exited"]
